--- a/dev/scss/sections/_start_here.scss
+++ b/dev/scss/sections/_start_here.scss
@@ -4,15 +4,60 @@
 
 #start_here{
     display: grid;
-    grid-template-columns: 16px auto 16px;
+    grid-template-columns: 0px auto 0px;
     grid-template-areas: ". start_here .";
+
+    @include md{
+        grid-template-columns: 0px auto 0px;
+    }
 
     >div{
     grid-area: start_here;
+    gap: 16px;
+    margin: 16px 0;
 
     @include md{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         }
-    }   
-}
+
+    .start_here-s1{
+        background-color: #836262;
+        padding: 16px;
+        display: flex;
+
+        @include md{
+        margin: 0 16px;
+        }
+
+        section{
+            form{
+                button{
+                    border: none;
+                    background-color: #91CFCE; 
+                    margin-left: auto;
+                }
+            }
+            }
+    }  
+    .start_here-s2{
+        background-color: #836262;
+        padding: 16px;
+        display: flex;
+
+        @include md{
+        margin: 0 16px;
+        }
+
+        section{
+            form{
+                button{
+                    border: none;
+                    background-color: #91CFCE; 
+                    margin-left: auto;
+                }
+            }
+            }
+    }  
+    }
+}   
